# pixel

./: CMakeLists.txt  main.cc
camera/: pinhole_camera.cc  pinhole_camera.h
core/: bbox.cc  bbox.h  camera.h  film.cc  film.h  integrator.cc  integrator.h  interaction.cc  interaction.h  light.cpp  light.h  material.h  matrix.cc  matrix.h  montecarlo.cc  montecarlo.h  pixel.h  primitive.h  ray.cc  ray.h  renderer.cc  renderer.h  scattering.cc  scattering.h  scene.cc  scene.h  shape.cc  shape.h  spectrum.h  sse_matrix.cc  sse_matrix.h  sse_spectrum.h  sse_vector.h  texture.cpp  texture.h  tonemapper.cc  tonemapper.h  transform.cc  transform.h  vector.h
film/: box_film.cc  box_film.h
integrator/: debug_integrator.cc  debug_integrator.h  direct_integrator.cpp  direct_integrator.h  path_tracer_integrator.cpp  path_tracer_integrator.h  whitted_integrator.cpp  whitted_integrator.h
lights/: area_light.cpp  area_light.h  point_light.cpp  point_light.h
material/: emitting_material.cc  emitting_material.h  glass_material.cpp  glass_material.h  matte_material.cc  matte_material.h  mirror_material.cpp  mirror_material.h
primitives/: instance.cc  instance.h  prim_list.cc  prim_list.h
renderer/: sampler_renderer.cc  sampler_renderer.h
shapes/: rectangle.cc  rectangle.h  shape_list.cc  shape_list.h  sphere.cc  sphere.h
texture/: checkboard_texture.h  constant_texture.h  grid_texture.h
tonemapper/: clamp_tonemapper.cc  clamp_tonemapper.h
